completed the project

--- a/index.html
+++ b/index.html
@@ -76,5 +76,31 @@
         </p>
       </div>
     </section>
+
+    <!-- Text Styles -->
+    <section class="headings">
+      <h2>Text Styles</h2>
+
+      <h1>H1: Main page heading</h1>
+      <ul>
+        <li>Font-weight: 700 (bold)</li>
+        <li>Font-size 26px</li>
+        <li>Font-family: Nunito Sans</li>
+      </ul>
+
+      <h2 class="subheading">H2: Subheading</h2>
+      <ul>
+        <li>Font-weight: 500</li>
+        <li>Font-size: 18px</li>
+        <li>Font-family: Poppins</li>
+      </ul>
+
+      <p class="paragraph">P: Paragraph Text</p>
+      <ul>
+        <li>Font-weight: 400 (regular)</li>
+        <li>Font-size: 18px</li>
+        <li>Font-family: Poppins</li>
+      </ul>
+    </section>
   </body>
 </html>
